@startuml
!define RECTANGLE_COLOR #ADD8E6
skinparam rectangle {
    BackgroundColor RECTANGLE_COLOR
    BorderColor black
    FontColor black
}

class User {
    +id: int
    +name: string
    +email: string
    +phone: string
    +password: string
    +role: enum(customer, admin)
    +created_at: timestamp
    +updated_at: timestamp
}

class Product {
    +id: int
    +name: string
    +description: text
    +brand: string
    +size: string
    +gender: string
    +price: decimal
    +stock: int
    +image_url: string
    +is_active: bool
    +created_at: timestamp
}

class Cart {
    +id: int
    +user_id: int
    +created_at: timestamp
    +updated_at: timestamp
}

class CartItem {
    +id: int
    +cart_id: int
    +product_id: int
    +quantity: int
    +created_at: timestamp
    +updated_at: timestamp
}

User "1" -- "*" Cart : owns
Cart "1" -- "*" CartItem : contains
CartItem "1" -- "1" Product : references
@enduml